# otel-poc

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.otel-stack.yml  docker-compose.yml  otel-collector-config.yml
.devcontainer/cpp/: devcontainer.json  install-dependencies.sh  setup.sh
.devcontainer/csharp/: devcontainer.json
.devcontainer/go/: devcontainer.json
.devcontainer/kind/: devcontainer-lock.json  devcontainer.json  setup.sh
.devcontainer/python/: devcontainer.json
.devcontainer/rust/: devcontainer.json
.github/workflows/: _run-otel-poc.yml  build-multiarch-images.yml  lint.yml  otel-poc.yml
charts/services/cpp-otel-service/: values.yaml
charts/services/cpp-otel-service/templates/: _helpers.tpl  deployment.yaml  httproute.yaml  service.yaml  serviceaccount.yaml
charts/services/csharp-otel-service/: Chart.yaml  values.yaml
charts/services/csharp-otel-service/templates/: deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/services/go-otel-service/: values.yaml
charts/services/go-otel-service/templates/: deployment.yaml  service.yaml  serviceaccount.yaml
charts/services/python-otel-service/: Chart.yaml  values.yaml
charts/services/python-otel-service/templates/: NOTES.txt  deployment.yaml  hpa.yaml  service.yaml
charts/services/rust-otel-service/: values.yaml
charts/services/rust-otel-service/templates/: NOTES.txt  deployment.yaml  hpa.yaml  httproute.yaml  service.yaml  serviceaccount.yaml
configs/otel-collector/: otel-collector-config.yml
docs/: ADR-001-CENTRALIZED-OBSERVABILITY.md
infra/: docker-compose.yml
infra/compose/: docker-compose.ci.yml  docker-compose.yml
infra/grafana/: Dockerfile
infra/helm-charts/otel-platform/: Chart.yaml  values.yaml
infra/helm-charts/otel-poc/: Chart.yaml  README.md  values.yaml
infra/helm-charts/services/cpp-otel-service/: Chart.yaml
infra/prometheus/: Dockerfile
otel-collector/: Dockerfile
prometheus/: prometheus.yml
scripts/: cleanup-kind.sh  deploy-to-kind.sh  generate-kind-traffic.sh  generate-traffic.sh  get-helm-chart-versions.sh  port-forward-in-kind.sh  start.sh
services/cpp/: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp
services/cpp-otel-service/: CMakeLists.txt  Dockerfile  main.cpp
services/cpp-service/: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp
services/csharp/: Dockerfile  OtelService.csproj  Program.cs  otel-observability-stack.sln
services/csharp-otel-service/: .dockerignore  Program.cs
services/csharp-service/: Dockerfile  OtelService.csproj.lscache
services/go/: .dockerignore  Dockerfile  go.mod  main.go
services/go-otel-service/: Dockerfile  go.mod  go.sum
services/go-service/: .dockerignore  go.mod
services/python/: .dockerignore
services/python-otel-service/: main.py
services/python-service/: .dockerignore  main.py  requirements.txt
services/rust/: .dockerignore  Cargo.toml  Dockerfile
services/rust-otel-service/: Cargo.toml  Dockerfile
services/rust-otel-service/src/: main.rs
services/rust-service/: .dockerignore  Cargo.toml  Dockerfile
services/rust/src/: main.rs
tests/: conftest.py  helpers.py  pytest.ini  test_telemetry.py
(+45 files in other folders)
