[package]
name = "rust-otel-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
serde = { version = "1.0", features = ["derive"] }
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic", "metrics"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
