[package]
name = "rust-otel-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
serde = { version = "1.0.228", features = ["derive"] }
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.31.0", features = ["tonic", "metrics", "logs", "grpc-tonic"] }
opentelemetry-appender-tracing = "0.31.1"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-opentelemetry = "0.32.0"
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4.42"